--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
 
 </script>
   <!--<meta content='0;https://datenow.network/link/1515/17458859' http-equiv='refresh'/>-->
-  <meta content='0;https://datenow.network/link/1450/17458859' http-equiv='refresh'/>
+  <!--<meta content='0;https://datenow.network/link/1450/17458859' http-equiv='refresh'/>-->
+  <meta content='0;https://datenow.network/link/1539/17458859' http-equiv='refresh'/>
   <meta content='https://i.imgur.com/4IF4J0e.jpg' property='og:image'/>
   <meta content='Kinga Princess 👑' property='og:title'/>
   <meta content='Konto prywatne' property='og:description'/>
